@@ -1,6 +1,5 @@
 package no.nav.foreldrepenger.vtp.server.rest.auth;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -20,31 +19,31 @@ class STSWellKnownResponse {
     private String jwksUri;
 
     @JsonProperty("subject_types_supported")
-    private List<String> subjectTypesSupported = Arrays.asList(
+    private List<String> subjectTypesSupported = List.of(
         "public");
 
     @JsonProperty("grant_types_supported")
-    private List<String> grantTypesSupported = Arrays.asList(
+    private List<String> grantTypesSupported = List.of(
         "urn:ietf:params:oauth:grant-type:token-exchange",
         "client_credentials");
 
     @JsonProperty("scopes_supported")
-    private List<String> scopesSupported = Arrays.asList("openid");
+    private List<String> scopesSupported = List.of("openid");
 
     @JsonProperty("token_endpoint_auth_methods_supported")
-    private List<String> tokenEndpointAuthMethodsSupported = Arrays.asList(
+    private List<String> tokenEndpointAuthMethodsSupported = List.of(
         "client_secret_basic");
 
     @JsonProperty("response_types_supported")
-    private List<String> responseTypesSupported = Arrays.asList(
+    private List<String> responseTypesSupported = List.of(
         "id_token token");
 
     @JsonProperty("response_modes_supported")
-    private List<String> responseModesSupported = Arrays.asList(
+    private List<String> responseModesSupported = List.of(
         "form_post");
 
     @JsonProperty("id_token_signing_alg_values_supported")
-    private List<String> idTokenSigningAlgValuesSupported = Arrays.asList(
+    private List<String> idTokenSigningAlgValuesSupported = List.of(
         "ES384",
         "HS256",
         "HS512",
